--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Simple desktop application created to remind about uncomplited tasks in Evernote",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "1postinstall": "npm run typings && npm run tsc",
+    "typings": "./node_modules/.bin/typings i",
+    "tsc": "./node_modules/.bin/tsc -p ./",
+    "webpack:dev": "webpack --verbose --colors --display-error-details --config webpack/dev.config.js",
+    "build:dev": "npm run webpack:dev",
+    "build": "npm run build:dev"
   },
   "repository": {
     "type": "git",
@@ -24,13 +29,30 @@
   },
   "homepage": "https://github.com/OlegDokuka/EvernoteReminder#readme",
   "dependencies": {
-    "es6-promise": "^3.2.1",
-    "evernote": "^1.25.82"
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-messages": "^1.5.8",
+    "angular-material": "^1.1.0-rc.5",
+    "angular-ui-router": "^1.0.0-alpha.5",
+    "jquery": "^3.1.0",
+    "evernote": "^1.25.82",
+    "lodash": "^4.14.0"
   },
   "devDependencies": {
+    "winston": "latest",
+    "typescript": "beta",
     "electron-prebuilt": "latest",
     "tslint": "latest",
     "tslint-loader": "latest",
-    "ts-loader": "latest"
+    "awesome-typescript-loader": "latest",
+    "style-loader": "latest",
+    "css-loader": "latest",
+    "json-loader": "latest",
+    "raw-loader": "latest",
+    "html-loader": "latest",
+    "file-loader": "latest",
+    "url-loader": "latest",
+    "webpack": "latest"
   }
 }
