--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,17 @@
 {
     "compileOnSave": true,
     "compilerOptions": {
-        "target": "es5",
+        "allowJs": false,
+        "target": "es6",
         "sourceMap": true,
         "module": "commonjs",
-        "outDir": "./out"
+        "outDir": "./static/out"
     },
-    
     "exclude": [
-        "./node_modules/**",
-        "./typings/**"
+        "node_modules/**/typescript/*",
+        "node_modules/**/tslint/*",
+        "node_modules/**/awesome-typescript-loader/*",
+        "bower_components",
+        "static/*"
     ]
 }
